--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "In session refactoring exercise",
 	"scripts": {
+		"build": "tsc",
 		"test": "jest"
 	},
 	"author": "Tech Returners",
@@ -11,7 +12,10 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.2",
 		"@babel/preset-env": "^7.20.2",
+		"@types/jest": "^29.2.5",
 		"babel-jest": "^29.3.1",
-		"jest": "^29.3.1"
+		"jest": "^29.3.1",
+		"ts-jest": "^29.0.3",
+		"typescript": "^4.9.4"
 	}
 }
